# FaceVeil

./: .gitignore  CMakeLists.txt  README.md  RELEASE_NOTES.md
assets/: ._FaceVeil.icns  FaceVeil.icns
include/faceveil/: FaceDetection.hpp  ImageScanner.hpp  MainWindow.hpp  Mosaic.hpp  ProcessorWorker.hpp  ReviewDialog.hpp  ReviewTypes.hpp  ScrfdFaceDetector.hpp
scripts/: entitlements.plist  make_icon.sh  notarize_macos.sh  package_macos.sh  package_windows.ps1
src/: ImageScanner.cpp  MainWindow.cpp  Mosaic.cpp  ProcessorWorker.cpp  ReviewDialog.cpp  ScrfdFaceDetector.cpp  main.cpp
tools/: inspect_model.cpp
